[package]
name = "alexa-smart-home-skill"
version = "0.1.0"
edition = "2021"
authors = ["R. Traverso"]
description = """
An AWS Lambda function that provides the same functionalities as the original python script
described into the Home Assistant guide to Alexa integration.
"""
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "charset", "json"] }
lambda_http = { version = "0.11" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1", default-features = false, features = ["rt", "macros"] }