[package]
name = "alexa-smart-home-skill"
version = "0.2.0"
edition = "2021"
authors = ["Riccardo Traverso"]
description = """
An AWS Lambda function that provides the same functionalities as the original python script
described into the Home Assistant guide "Amazon Alexa Smart Home Skill".
This one is written in Rust though, therefore allocates faster in cold boots and also runs
somewhat faster.

See also https://www.home-assistant.io/integrations/alexa.smart_home/#add-code-to-the-lambda-function
"""
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0" }
lambda_http = { version = "0.11" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "charset", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1", default-features = false, features = ["rt", "macros"] }
url = { version = "2.5.0"}
